# Project_Rokey_turtlebot4

./: .gitignore  CLAUDE.md  LICENSE  README.md  fastdds_unicast.xml
alfred_interaction/src/app/: KioskApp.tsx
alfred_interaction/src/config/: env.ts  i18n.ts
alfred_interaction/src/services/: createServices.ts
docs/: DEPLOYMENT_TOPOLOGY.dot  DEPLOYMENT_TOPOLOGY_SEPARATED.dot  FMS_서버_구현가이드.md  INTERFACE_CONTRACT.md  ROBOT_UNIT_NODES_make.py  SYSTEM_ARCHITECTURE.dot  alfred_system_flow.drawio  bridge_config.template.yaml  draw_arch.py  draw_arch_comparison.py  robot_state_publisher_node.drawio  구성요소_분석_fms_viz_monitor.md  인터페이스_정의서_v2_1.md
docs/maps/: map_1.pgm  map_2.yaml
fms_server/: README.md  api.py  config.py  db.py  event_service.py  messages.py  mission_manager.py  poi_table.yaml  states.py
fms_server/tools/: build_maps.py  demo_events.py  echo_test.py  integration_test.py  send_event.py  send_request.py  watch.py
fms_server/web/: dashboard.html  video_sources.json
monitor/: fms.db  fms.db-shm  fms.db-wal  messages.py  state_machine.py
monitor/tools/: mock_robot.py  send_request.py
monitor_db_files/: db_bridge.py  monitor_api.py  monitor_db.py  ros_db_bridge.py
monitor_db_files/data/: monitor.db  monitor.db-shm  monitor.db-wal
monitor_server/: .env.example  README.md  api.py  config.py  db.py  event_service.py  main.py  messages.py  poi.py  poi_table.yaml  requirements.txt  robot_registry.py  ros_ingest.py  states.py  store.py  transport.py  usage_service.py
monitor_server/supabase/: 02_functions.sql  03_grants.sql
monitor_server/tools/: build_maps.py  demo_events.py  send_event.py
monitor_server/web/: dashboard.html  video_sources.json
monitor_server/web-vercel/: index.html  supabase-config.js  vercel.json
monitor_server/web-vercel/viz/: index.html
monitor_server/web/maps/: floor_data.json
src/: .gitkeep
src/alfred_bridge/: package.xml  setup.cfg  setup.py
src/alfred_bridge/alfred_bridge/: docking.py  escort_sim_test.py  escort_state_bridge_node.py  fake_robot.py  fms_bridge_node.py  localization.py  robot2_state_manager.py  robot4_state_manager.py  robot_state_publisher_node.py  state_ws_bridge_node.py  ws_sub_test.py
src/alfred_bridge/config/: poi_table.yaml
src/alfred_bringup/: package.xml  setup.cfg  setup.py
src/alfred_bringup/config/: robot2.yaml  robot4.yaml
src/alfred_bringup/launch/: unit.launch.py
src/alfred_bringup/maps/: .gitkeep
src/alfred_driving/: package.xml  setup.cfg  setup.py
src/alfred_driving/alfred_driving/: aruco_marker_patrol_robot4.py  aruco_tracker_node.py  behavior_node.py  escort_node.py  locations.py  marker_speed_governor.py  nav_to_pose.py  navigation_node.py  patrol_node.py  rosbridge_node.py  scenario_manager_node.py  scenario_planner.py  server_request_node.py  web_request_node.py
src/alfred_driving/config/: .gitkeep  ex_params.yaml  nav2_with_yolo_obstacles.yaml  nav2_with_yolo_obstacles_robot2.yaml  nav2_with_yolo_obstacles_robot4.yaml  nav2_yolo_obstacles.yaml
src/alfred_driving/launch/: web_scenario.launch.py
src/alfred_driving/resource/map/: map_1.yaml  map_2.pgm  map_2.yaml  map_2_1.pgm  map_2_1.yaml
src/alfred_interaction/: .env.example  ROSBRIDGE_노트북_매뉴얼.md  RUN.md  WINDOWS_CLAUDE_HANDOFF.md  package.xml  requirement_ver03.md  setup.cfg  setup.py  user_interaction_코드_구성요소_분석.md  ws-robot-state.mjs  경보모듈_가이드.md  로봇상태_UI연동_계약.md
src/alfred_interaction/alfred_interaction/: llm_node.py  stt_node.py  tts_node.py  ui_node.py
src/alfred_interaction/docs/: UI_구조_정리.md  flowchart.drawio  시나리오_정리.md  코드리뷰_데이터연동_4파일.md  핵심코드_설명.md
src/alfred_interfaces/: CMakeLists.txt  package.xml
src/alfred_interfaces/msg/: Event.msg  MissionSignal.msg  Request.msg  RobotState.msg  Task.msg  TaskAck.msg
src/alfred_monitor_server/: package.xml  setup.cfg  setup.py
src/alfred_monitor_server/alfred_monitor_server/: api.py  config.py  db.py  event_service.py  main.py  messages.py  poi.py  robot_registry.py  ros_ingest.py  store.py  usage_service.py
src/alfred_monitor_server/alfred_monitor_server/viz_3d/: index.html  vite.config.ts
src/alfred_monitor_server/alfred_monitor_server/viz_3d/src/: styles.css
src/alfred_monitor_server/alfred_monitor_server/viz_3d/src/config/: types.ts
src/alfred_monitor_server/alfred_monitor_server/viz_3d/src/data/: mock.ts
src/alfred_monitor_server/alfred_monitor_server/viz_3d/src/three/: CCTVMarker.tsx  FloorModel.tsx  PathLine.tsx
src/alfred_monitor_server/alfred_monitor_server/web/: dashboard.html  login.html
src/alfred_monitor_server/supabase/: 01_schema.sql  README.md
src/alfred_monitor_server/tools/: check_login.sh
src/alfred_monitor_server/web-vercel/: index.html  video_sources.json
src/alfred_monitor_server/web-vercel/viz/maps/: floor_data.json  maps.json
src/alfred_vision/: ARCHITECTURE.md  package.xml  review.md  setup.cfg  setup.py
src/alfred_vision/alfred_vision/: audio.py  detector_node.py  event_handler_node.py  video_sender_node.py  vision_resource.py  yolo_monitor_node.py
src/alfred_vision/alfred_vision/handlers/: fire_handler.py  injured_handler.py  lost_item_handler.py  suspicious_handler.py
src/alfred_vision/config/: params.yaml
src/alfred_vision/launch/: detection.launch.py
src/alfred_vision/resource/: pt_check.py
src/robot_state_manager/: package.xml  setup.cfg  setup.py
viz_3d/: README.md  index.html  package-lock.json  package.json
viz_3d/src/: App.tsx
viz_3d/src/config/: cctv.ts  (+2 more)
(+93 files in other folders)
