<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alfred_bringup</name>
  <version>0.1.0</version>
  <description>로봇 유닛 통합 기동: launch + 로봇별 파라미터(robot2/robot4) + 맵</description>
  <maintainer email="sunq0726@gmail.com">ROKEY 7기 지능1 Team Alfred</maintainer>
  <license>MIT</license>

  <exec_depend>alfred_bridge</exec_depend>
  <exec_depend>alfred_interaction</exec_depend>
  <exec_depend>alfred_driving</exec_depend>
  <exec_depend>alfred_vision</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
